# docs/swagger.yaml
@@ -31,6 +31,13 @@ definitions:
       total_pages:
         type: integer
     type: object
+  github_com_TrinityKnights_Backend_internal_domain_model.RefreshTokenRequest:
+    properties:
+      refresh_token:
+        type: string
+    required:
+    - refresh_token
+    type: object
   github_com_TrinityKnights_Backend_internal_domain_model.RegisterRequest:
     properties:
       email:
@@ -128,7 +135,6 @@ paths:
       - description: User ID
         in: query
         name: id
-        required: true
         type: string
       produces:
       - application/json
@@ -250,6 +256,40 @@ paths:
           schema:
             $ref: '#/definitions/github_com_TrinityKnights_Backend_internal_domain_model.Error'
       summary: Login user
+      tags:
+      - user
+  /users/refresh:
+    post:
+      consumes:
+      - application/json
+      description: Refresh token
+      parameters:
+      - description: User data
+        in: body
+        name: user
+        required: true
+        schema:
+          $ref: '#/definitions/github_com_TrinityKnights_Backend_internal_domain_model.RefreshTokenRequest'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/github_com_TrinityKnights_Backend_internal_domain_model.Response-github_com_TrinityKnights_Backend_internal_domain_model_TokenResponse'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/github_com_TrinityKnights_Backend_internal_domain_model.Error'
+        "401":
+          description: Unauthorized
+          schema:
+            $ref: '#/definitions/github_com_TrinityKnights_Backend_internal_domain_model.Error'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/github_com_TrinityKnights_Backend_internal_domain_model.Error'
+      summary: Refresh token
       tags:
       - user
 securityDefinitions:
